--- a/ghcjs-ajax/ghcjs-ajax.cabal
+++ b/ghcjs-ajax/ghcjs-ajax.cabal
@@ -16,7 +16,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     JavaScript.Ajax
   ghc-options:         -Wall
-  build-depends:       base
+  build-depends:       base >=4.7 && <5
                      , text
                      , http-types
   default-language:    Haskell2010
