--- a/async-ajax/async-ajax.cabal
+++ b/async-ajax/async-ajax.cabal
@@ -18,7 +18,7 @@ library
   ghc-options:         -Wall
   build-depends:       base >=4.7 && <5
                      , async
-                     , ghcjs-ajax
+                     , ghcjs-ajax >= 0.2
                      , text
   default-language:    Haskell2010
 
