--- a/ghcjs-ajax/ghcjs-ajax.cabal
+++ b/ghcjs-ajax/ghcjs-ajax.cabal
@@ -1,5 +1,5 @@
 name:                ghcjs-ajax
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            Crossbrowser AJAX Bindings for GHCJS
 description:         Please see README.md
 homepage:            https://github.com/agrafix/ghcjs-ajax#readme
@@ -19,6 +19,7 @@ library
   build-depends:       base >=4.7 && <5
                      , text
                      , http-types
+                     , aeson
   default-language:    Haskell2010
   js-sources:          jsbits/core.js
   if impl(ghcjs)
